--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,7 @@ crashlytics-build.properties
 /[Aa]ssets/PlayMaker.meta
 /[Aa]ssets/Plugins/PlayMaker
 /[Aa]ssets/Plugins/PlayMaker.meta
+/[Aa]ssets/STYLY_Plugin.meta
+/[Aa]ssets/STYLY_Plugin
+
+_Output
